# Agentura

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SECURITY.md
apps/executive-cli/: README.md  alembic.ini  pyproject.toml
apps/executive-cli/alembic/: env.py
apps/executive-cli/alembic/versions/: a06fd86f7505_initial_schema.py  a7b9c2d4e6f1_add_ingest_pipeline_schema.py  b1c3d5e7f9a2_add_pipeline_engine_schema.py  b7e2c3d41a09_add_day_plans_and_time_blocks.py  b8ada07e8d01_enforce_busy_interval_integrity.py  c3f1a9b20e47_add_people_decisions_with_fts5.py  d4a2b5c30f18_add_weekly_reviews.py  f0c9e7b1a2d3_add_provenance_schema_for_external_sync.py
apps/executive-cli/src/executive_cli/: __init__.py  __main__.py  approval_gate.py  busy_service.py  cli.py  config.py  db.py  gtd_pipeline.py  llm_gateway.py  metrics.py  models.py  pipeline_engine.py  planner.py  reflect_pipeline.py  review.py  scrum_metrics.py  secret_store.py  sync_runner.py  sync_service.py  task_service.py  timeutil.py
apps/executive-cli/src/executive_cli/connectors/: __init__.py  caldav.py  imap.py
apps/executive-cli/src/executive_cli/ingest/: __init__.py  classifier.py  dedup.py  dialogue_pipeline.py  email_pipeline.py  router.py  (+4 more)
apps/executive-cli/tests/: test_approval_gate.py  test_busy_block_constraints.py  test_busy_merge.py  test_caldav_connector.py  test_calendar_next_week.py  test_calendar_sync.py  test_dialogue_pipeline.py  test_email_pipeline.py  test_gtd_pipeline.py  test_ingest_pipeline.py  test_ingest_schema.py  test_llm_gateway.py  test_mail_sync.py  test_meeting_pipeline.py  test_metrics.py  test_people_decisions_fts.py  test_pipeline_engine.py  test_planner.py  test_provenance_schema.py  test_reflect_pipeline.py  test_scrum_metrics.py  test_secret_cli.py  test_secret_store.py  test_security_guardrails.py  test_sync_hourly.py  test_task_email_link.py  test_timeutil.py  test_weekly_review.py
(+127 files in other folders)
