[project]
name = "executive-cli"
version = "0.1.0"
description = "Executive Assistant CLI bootstrap"
readme = "README.md"
authors = [
    { name = "Aleksey Gaydabura", email = "YOUR_EMAIL_HERE" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "rich>=14.3.2",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.33",
    "typer>=0.23.1",
]

[project.scripts]
execas = "executive_cli.cli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
